Add Product and DatabaseManager integration with SQLite